# flag_alpha

./: MANIFEST.in  README.md  pyproject.toml
examples/: ex_brine.py  ex_density.py  ex_h2o.py
flag/: __init__.py  brine.py  co2.py  co2_eos.py  co2_tmp.py  exceptions.py  fluidsub.py  gas.py  h2o.py  h2o_co2.py  oil.py  registry.py  types.py  utils.py
flagpy_wheels/: flag-0.1.0-cp310-cp310-macosx_11_0_arm64.whl  flag-0.1.0-cp310-cp310-manylinux_2_17_i686.manylinux2014_i686.whl  flag-0.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  flag-0.1.0-cp310-cp310-musllinux_1_2_i686.whl  flag-0.1.0-cp310-cp310-musllinux_1_2_x86_64.whl  flag-0.1.0-cp310-cp310-win32.whl  flag-0.1.0-cp310-cp310-win_amd64.whl  flag-0.1.0-cp311-cp311-macosx_11_0_arm64.whl  flag-0.1.0-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  flag-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  flag-0.1.0-cp311-cp311-musllinux_1_2_i686.whl  flag-0.1.0-cp311-cp311-musllinux_1_2_x86_64.whl  flag-0.1.0-cp311-cp311-win32.whl  flag-0.1.0-cp311-cp311-win_amd64.whl  flag-0.1.0-cp312-cp312-macosx_11_0_arm64.whl  flag-0.1.0-cp312-cp312-manylinux_2_17_i686.manylinux2014_i686.whl  flag-0.1.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  flag-0.1.0-cp312-cp312-musllinux_1_2_i686.whl  flag-0.1.0-cp312-cp312-musllinux_1_2_x86_64.whl  flag-0.1.0-cp312-cp312-win32.whl  flag-0.1.0-cp312-cp312-win_amd64.whl  (+22 more)
src/: CMakeLists.txt  bindings.cpp  brine.cpp  brine.hpp  co2.cpp  co2.hpp  gas.cpp  gas.hpp  h2o.cpp  h2o.hpp  h2o_co2.cpp  h2o_co2.hpp  heavy_oil.cpp  heavy_oil.hpp  license.cpp  license.hpp  oil.cpp  oil.hpp  oil_co2.cpp  oil_co2.hpp  oil_gas.cpp  oil_gas.hpp  oil_hc_co2.cpp  oil_hc_co2.hpp  test_co2  test_co2.cpp  utils.cpp  utils.hpp
(+22 files in other folders)
